change node version

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "learn dash code",
+  "name": "learn-dash-code",
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=14.0"
+    "node": "14.0"
   },
   "engineStrict": true,
   "scripts": {
