--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "html-react-parser": "^1.4.8",
         "moment": "^2.29.1",
         "next": "latest",
+        "next-images": "^1.8.4",
         "nodemailer": "^6.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
